# rif

./: .gitmodules  README.md  dune-project  rif.opam
examples/: create.sh  minimal.gtirb  minimal.gts  minimal.json  minimal.out  secret_write.c  secret_write.gtirb  secret_write.json  secret_write.out  shuffle.c  shuffle.gtirb  shuffle.json  shuffle.out  spinlock.c  spinlock.gtirb  spinlock.json  spinlock.out
examples/minimal-reordering/: src.c  src.c.out  src.c.out.gtirb  src.c.out.gts
lib/: dune  option.ml
lib/llvm_disass/: README.md  dune  llvm_disass.ml  llvm_disass.mli
